--- a/GroceryGenie/frontend/static/css/style.css
+++ b/GroceryGenie/frontend/static/css/style.css
@@ -1,5 +1,3 @@
-/* static/style.css */
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -256,4 +254,45 @@ button:hover {
     font-size: 12px;
     font-weight: bold;
     margin-bottom: 10px;  /* Add space for visibility */
+}
+
+/* Profile.html */
+
+.profile-pic-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.profile-pic-container img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #ddd;
+}
+
+.profile-pic-container input {
+    margin-top: 10px;
+}
+
+.input-group {
+    text-align: left;
+    margin-bottom: 12px;
+}
+
+.input-group label {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #555;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
 }
