Profile page frontend

--- a/GroceryGenie/frontend/templates/login.html
+++ b/GroceryGenie/frontend/templates/login.html
@@ -64,7 +64,7 @@
             <label>Password:</label>
             <input type="password" id="password" required>
 
-            <button type="submit">Login</button>
+            <button type="submit" class="btnlogin">Login</button>
         </form>
 
         <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
