--- a/GroceryGenie/frontend/templates/login.html
+++ b/GroceryGenie/frontend/templates/login.html
@@ -21,7 +21,7 @@
     </script>
   </head>
   <body>
-    <div class="container">
+    <div class="container login-register">
       <h2>Login to Grocery Genie</h2>
 
       <!-- Flash Messages (For Registration Success or Errors) -->
