--- a/GroceryGenie/frontend/templates/home.html
+++ b/GroceryGenie/frontend/templates/home.html
@@ -28,7 +28,7 @@
   <!-- Announcements Section -->
   <div class="card announcement-card">
     <h2>[ Announcements ]</h2>
-    <p>Release Now!</p>
+    <p>Release Now! Welcome to GroceryGenie</p>
     <!-- You can update this part anytime -->
   </div>
 </div>
